mod clase
